--- a/carla_ackermann_control_wrapper/package.xml
+++ b/carla_ackermann_control_wrapper/package.xml
@@ -20,7 +20,7 @@
   <name>carla_ackermann_control_wrapper</name>
   <version>3.2.0</version>
   <description>The wrapper for Carla Ackermann Controller</description>
-  <maintainer email="zhouf1@leidos.com">rushk</maintainer>
+  <maintainer email="fang.zhou@leidos.com">Fang Zhou</maintainer>
   <license>Apache 2.0 License</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>carma_utils</depend>
