--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -18,13 +18,12 @@ sonar.projectKey=usdot-fhwa-stol_carma-simulation
 sonar.organization=usdot-fhwa-stol
 sonar.cfamily.build-wrapper-output=/opt/carma/bw-output
 sonar.host.url=https://sonarcloud.io
-sonar.sources=src/main
 sonar.cfamily.gcov.reportsPath=/opt/carma/coverage_reports/gcov
-sonar.tests=src/test
 # Set Git as SCM sensor
 sonar.scm.disabled=false
 sonar.scm.enabled=true
 sonar.scm.provider=git
+sonar.cfamily.cache.enabled=false
 
 # Modules
 sonar.modules=carla_ackermann_control_wrapper
