--- a/carla_ackermann_control_wrapper/CMakeLists.txt
+++ b/carla_ackermann_control_wrapper/CMakeLists.txt
@@ -29,6 +29,8 @@ find_package(catkin REQUIRED COMPONENTS
   cav_srvs
   roscpp
   autoware_msgs
+  ackermann_msgs
+  carla_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -51,7 +53,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
    INCLUDE_DIRS include
-   CATKIN_DEPENDS carma_utils cav_msgs cav_srvs roscpp autoware_msgs
+   CATKIN_DEPENDS carma_utils cav_msgs cav_srvs roscpp autoware_msgs ackermann_msgs carla_msgs
 )
 
 ###########
