--- a/carla_ackermann_control_wrapper/package.xml
+++ b/carla_ackermann_control_wrapper/package.xml
@@ -29,4 +29,6 @@
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>autoware_msgs</depend>
+  <depend>ackermann_msgs</depend>
+  <depend>carla_msgs</depend>
 </package>
