Add files for docker build

--- a/carla_ackermann_control/CMakeLists.txt
+++ b/carla_ackermann_control/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   dynamic_reconfigure
   carla_msgs
   roslaunch
+  message_generation
 )
 
 catkin_python_setup()
