Add checkout.sh call in circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,12 @@ jobs:
             mkdir carma-simulation
       - checkout:
           path: src/carma-simulation
+      - run: 
+          name: Pull Deps
+          command: |
+            source ${INIT_ENV}
+            ./src/CARMAPlatform/docker/checkout.sh -r ${PWD}
+            cd ${PWD}
       - run:
           name: Build Driver
           command: |
