Fix file not found error during cmake_install

--- a/carla_ackermann_control_wrapper/CMakeLists.txt
+++ b/carla_ackermann_control_wrapper/CMakeLists.txt
@@ -71,13 +71,16 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(
-  ${PROJECT_NAME}
-  src/main.cpp)
+  ${PROJECT_NAME}_node
+  ${headers}
+  src/main.cpp
+  src/carla_ackermann_control_wrapper.cpp
+  src/carla_ackermann_control_wrapper_worker.cpp)
   
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(${PROJECT_NAME} 
-  ${${PROJECT_NAME}_EXPORTED_TARGETS} 
+add_dependencies(${PROJECT_NAME}_node
+  ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
 )
 add_library(${PROJECT_NAME}_lib
@@ -89,7 +92,7 @@ add_dependencies(${PROJECT_NAME}_lib
 )
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME}_node
   ${PROJECT_NAME}_lib
   ${catkin_LIBRARIES}
 )
@@ -100,7 +103,7 @@ target_link_libraries(${PROJECT_NAME}
 #############
 
 ## Mark executables and/or libraries for installation
-install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_lib
+install(TARGETS ${PROJECT_NAME}_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -109,6 +112,8 @@ install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_lib
 # Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
 )
 
 # Mark other files for installation (e.g. launch and bag files, etc.)
