--- a/carla_carma/package.xml
+++ b/carla_carma/package.xml
@@ -4,9 +4,6 @@
   <version>0.0.0</version>
   <description>The carla_carma package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="carma@todo.todo">carma</maintainer>
 
 
@@ -49,30 +46,16 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>can_msgs</build_depend>
-  <build_depend>cav_msgs</build_depend>
-  <build_depend>cav_srvs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>j2735_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_export_depend>can_msgs</build_export_depend>
-  <build_export_depend>cav_msgs</build_export_depend>
-  <build_export_depend>cav_srvs</build_export_depend>
-  <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>j2735_msgs</build_export_depend>
+  <build_depend>carla_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>can_msgs</exec_depend>
-  <exec_depend>cav_msgs</exec_depend>
-  <exec_depend>cav_srvs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>j2735_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-
+  <exec_depend>carla_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
