Add geometry_msgs to wrapper and interface nodes

--- a/carla_ackermann_control_wrapper/package.xml
+++ b/carla_ackermann_control_wrapper/package.xml
@@ -28,6 +28,7 @@
   <depend>cav_srvs</depend>
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>autoware_msgs</depend>
   <depend>ackermann_msgs</depend>
   <depend>carla_msgs</depend>
