--- a/carla_carma/package.xml
+++ b/carla_carma/package.xml
@@ -25,11 +25,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>carla_msgs</exec_depend>
   <exec_depend>autoware_msgs</exec_depend>
   <exec_depend>cav_msgs</exec_depend>
