--- a/carla_ackermann_control/package.xml
+++ b/carla_ackermann_control/package.xml
@@ -7,6 +7,7 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>carla_msgs</build_depend>
   <build_depend>roslaunch</build_depend>
   <build_depend>message_generation</build_depend>
@@ -17,6 +18,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <exec_depend>carla_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <export>
   </export>
 </package>
