--- a/carla_carma/package.xml
+++ b/carla_carma/package.xml
@@ -26,13 +26,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>carla_msgs</exec_depend>
   <exec_depend>autoware_msgs</exec_depend>
   <exec_depend>cav_msgs</exec_depend>
+  <exec_depend>rosgraph_msgs</exec_depend>
 </package>
