Remove CEE packages from CI config

--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -26,13 +26,14 @@ sonar.scm.provider=git
 sonar.cfamily.cache.enabled=false
 
 # Modules
-sonar.modules=carla_ackermann_control_wrapper
+#sonar.modules=carla_ackermann_control_wrapper
 
-carla_ackermann_control_wrapper.sonar.projectBaseDir=/opt/carma/src/carma-simulation/carla_ackermann_control_wrapper
+#carla_ackermann_control_wrapper.sonar.projectBaseDir=/opt/carma/src/carma-simulation/carla_ackermann_control_wrapper
 
 # C++ Package differences
 # Sources
-carla_ackermann_control_wrapper.sonar.sources=src
+#carla_ackermann_control_wrapper.sonar.sources=src
+
 # Tests
 # Note: For C++ setting this field does not cause test analysis to occur. It only allows the test source code to be evaluated.
-carla_ackermann_control_wrapper.sonar.tests=test
+#carla_ackermann_control_wrapper.sonar.tests=test
