--- a/co-simulation tool/pom.xml
+++ b/co-simulation tool/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.eclipse.mosaic</groupId>
     <artifactId>mosaic-parent</artifactId>
-    <version>21.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <name>Eclipse MOSAIC Parent</name>
@@ -80,7 +80,7 @@
     </modules>
 
     <properties>
-        <mosaic.version>21.1-SNAPSHOT</mosaic.version>
+        <mosaic.version>1.0</mosaic.version>
         <parent.dir>.</parent.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.sourceTarget>1.8</project.build.sourceTarget>
