--- a/co-simulation tool/pom.xml
+++ b/co-simulation tool/pom.xml
@@ -455,6 +455,7 @@
                         <validHeaders>
                             <header>${parent.dir}/legal/templates/license-header-2020.txt</header>
                             <header>${parent.dir}/legal/templates/license-header-2021.txt</header>
+                            <header>${parent.dir}/legal/templates/cosimulation-license-header-2021.txt</header>
                         </validHeaders>
                         <headerDefinitions>
                         </headerDefinitions>
