--- a/carla-carma-integration/carla_carma_bridge/package.xml
+++ b/carla-carma-integration/carla_carma_bridge/package.xml
@@ -4,8 +4,8 @@
   <version>0.0.0</version>
   <description>The carla_carma_bridge package</description>
 
-  <maintainer email="cheng.yuan@Leidos.com">cheng.yuan</maintainer>
-  <license>MIT</license>
+  <maintainer email="carma@dot.gov">cheng.yuan</maintainer>
+  <license>Apache 2.0 License</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>autoware_msgs</build_depend>
@@ -19,4 +19,3 @@
   <export>
   </export>
 </package>
-
