--- a/carla-carma-integration/carla_carma_bridge/CMakeLists.txt
+++ b/carla-carma-integration/carla_carma_bridge/CMakeLists.txt
@@ -26,6 +26,11 @@ catkin_python_setup()
 catkin_package()
 
 catkin_install_python(PROGRAMS
+    src/carla_carma_bridge/carla_to_autoware_twist
+    src/carla_carma_bridge/carla_to_autoware_vehicle_status
+    src/carla_carma_bridge/carla_to_carma_localization
+    src/carla_carma_bridge/carma_to_carla_ackermann_cmd
+    src/carla_carma_bridge/carla_to_carma_external_objects
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
