--- a/co-simulation tool/rti/mosaic-starter/pom.xml
+++ b/co-simulation tool/rti/mosaic-starter/pom.xml
@@ -119,6 +119,18 @@
             <version>${mosaic.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.mosaic</groupId>
+            <artifactId>mosaic-carma</artifactId>
+            <version>${mosaic.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.mosaic</groupId>
+            <artifactId>mosaic-infrastructure</artifactId>
+            <version>${mosaic.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.eclipse.mosaic</groupId>
