--- a/carla-carma-integration/carla_carma_bridge/package.xml
+++ b/carla-carma-integration/carla_carma_bridge/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The carla_carma_bridge package</description>
 
-  <maintainer email="carma@dot.gov">cheng.yuan</maintainer>
+  <maintainer email="carma@dot.gov">carma</maintainer>
   <license>Apache 2.0 License</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
