Add vehicle_num parsing parameter to co-simulation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         reservations:
           devices:
             - capabilities: [gpu]
-    command: bash -c "export NS3_HOME='/ns-3-integration/bin/fed/ns3' && cd /ns-3-integration/ && ./mosaic.sh -s ${map}"
+    command: bash -c "export NS3_HOME='/ns-3-integration/bin/fed/ns3' && cd /ns-3-integration/ && ./mosaic.sh -s ${map}_${vehicle_num}"
 
   carla-carma-integration:
     image: carla-carma:latest
