Add "usdotfhwastol" as a prefix for both docker image of  carma-xil-cosimulation and carla-carma-integration
-- Change docker image name of carla-carma-integration to  usdotfhwastol/carla-carma-integration

-- Change docker image name of ns-3-integration to usdotfhwastol/carma-xil-cosimulation

-- Change docker-compose image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ version: "2"
 services:
   co-simulation:
     privileged: true
-    image: ns-3-integration:latest
+    image: usdotfhwastol/carma-xil-cosimulation:latest
     network_mode: host
     environment:
       - DISPLAY=${DISPLAY}
@@ -31,7 +31,7 @@ services:
     command: bash -c "export NS3_HOME='/ns-3-integration/bin/fed/ns3' && cd /ns-3-integration/ && ./mosaic.sh -s ${map}_${vehicle_num}"
 
   carla-carma-integration:
-    image: carla-carma-integration:latest
+    image: usdotfhwastol/carla-carma-integration:latest
     network_mode: host
     environment:
       - ROS_IP=127.0.0.1
