Commit initial edits

--- a/carla-carma-integration/carla_carma_bridge/CMakeLists.txt
+++ b/carla-carma-integration/carla_carma_bridge/CMakeLists.txt
@@ -21,6 +21,8 @@ catkin_install_python(PROGRAMS
     src/carla_carma_bridge/carla_to_carma_localization
     src/carla_carma_bridge/carma_to_carla_ackermann_cmd
     src/carla_carma_bridge/carla_to_carma_external_objects
+    src/carla_carma_bridge/carla_to_carma_route
+    src/carla_carma_bridge/carla_to_carma_plugins
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
