Commit Changes to carla-carma-integration node

--- a/carla-carma-integration/carla_carma_bridge/config/parameters.yml
+++ b/carla-carma-integration/carla_carma_bridge/config/parameters.yml
@@ -1,1 +1,9 @@
+#String: Route to be initialized
 routes: '/opt/carma/routes/'
+
+# List of String: Required plugins for the platform to be functional
+required_plugins:
+  - RouteFollowing
+  - InLaneCruisingPlugin
+  - StopAndWaitPlugin
+  - Pure Pursuit
