--- a/carla-carma-integration/carla_carma_bridge/package.xml
+++ b/carla-carma-integration/carla_carma_bridge/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>carla_msgs</exec_depend>
   <exec_depend>cav_msgs</exec_depend>
   <exec_depend>cav_srvs</exec_depend>
+  <exec_depend>health_monitor</exec_depend>
 
   <export>
   </export>
