Commit changes to carma_carla_route

--- a/carla-carma-integration/carla_carma_bridge/config/parameters.yml
+++ b/carla-carma-integration/carla_carma_bridge/config/parameters.yml
@@ -1,5 +1,5 @@
 #String: Route to be initialized
-selected_routes: '/opt/carma/routes/'
+selected_route: '/opt/carma/routes/tfhrc_test_route.csv'
 
 # List of String: Required plugins for the platform to be functional
 selected_plugins:
