--- a/carla-carma-integration/carla-carma-vehicle/package.xml
+++ b/carla-carma-integration/carla-carma-vehicle/package.xml
@@ -49,22 +49,14 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>carma-utils</build_depend>
-  <build_depend>carla_msgs</build_depend>
-  <build_depend>carla</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
+  <build_depend>roslaunch</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>carla_msgs</exec_depend>
-  <exec_depend>carla</exec_depend>
-
-
+  <exec_depend>topic_tools</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
@@ -72,3 +64,4 @@
 
   </export>
 </package>
+
