--- a/carla-carma-integration/carla-carma-vehicle/package.xml
+++ b/carla-carma-integration/carla-carma-vehicle/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>carla-carma-vehicle</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The carla-carma-vehicle package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="carma@todo.todo">carma</maintainer>
+  <maintainer email="carma@dot.gov">carma</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
