CI: replace build-wrapper with compilation database

--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -16,7 +16,8 @@
 
 sonar.projectKey=usdot-fhwa-stol_carma-simulation
 sonar.organization=usdot-fhwa-stol
-sonar.cfamily.build-wrapper-output=/opt/carma/bw-output
+sonar.cfamily.cache.enabled=false
+sonar.cfamily.compile-commands=/opt/carma/build/compile_commands.json
 sonar.host.url=https://sonarcloud.io
 sonar.cfamily.gcov.reportsPath=/opt/carma/coverage_reports/gcov
 # Set Git as SCM sensor
