--- a/co-simulation/fed/mosaic-carma/pom.xml
+++ b/co-simulation/fed/mosaic-carma/pom.xml
@@ -26,6 +26,11 @@
       <version>${mosaic.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.mosaic</groupId>
       <artifactId>mosaic-interactions</artifactId>
       <version>${mosaic.version}</version>
