Use simulation kernel message cache.
Also resolve issue with license procesing pre-build maven plugin

--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -472,6 +472,7 @@
                         <excludes>
                             <exclude>target/**</exclude>
                             <exclude>**/ClientServerChannelProtos.java</exclude>
+                            <exclude>fed/mosaic-carma/**</exclude>
                         </excludes>
                         <useDefaultExcludes>true</useDefaultExcludes>
                         <encoding>${project.build.sourceEncoding}</encoding>
