--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -24,5 +24,5 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: usdotfhwastoldev/${{ github.event.repository.name }}:${{ github.ref_name }} 
+          tags: usdotfhwastoldev/${{ github.event.repository.name }}:dev 
 
