--- a/.github/workflows/runtest.yml
+++ b/.github/workflows/runtest.yml
@@ -3,20 +3,32 @@ on:
   pull_request:
   push:
 jobs:          
-  sonar: # sonar job is to setup and run sonar scan analysis on carma-simulation code
-    runs-on: ubuntu-latest
+  sonar: # sonar job is to setup and run sonar scan analysis on telematic cloud messaging code
+    runs-on: ubuntu-latest  
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3 # The setup-java action provides the functionality for GitHub Actions runners for Downloading and setting up a requested version of Java
         with:
           java-version: 17
-          distribution: "temurin"
+          distribution: "temurin"        
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
         run: |
           cd co-simulation
-          mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Pcoverage -Dsonar.projectKey=usdot-fhwa-stol_carma-simulation -Dsonar.projectName=carma-simulation -Dsonar.organization=usdot-fhwa-stol -Dsonar.host.url=https://sonarcloud.io
-          
+          mvn --batch-mode -DskipTests package
+          #mvn -e -X  mvn --batch-mode clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dmaven.test.failure.ignore=true -Pcoverage -Dsonar.projectKey=usdot-fhwa-stol_carma-simulation -Dsonar.projectName=carma-simulation -Dsonar.organization=usdot-fhwa-stol -Dsonar.host.url=https://sonarcloud.io
+      - name: Test
+        run: |
+          cd co-simulation
+          mvn --batch-mode clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dmaven.test.failure.ignore=true -Pcoverage -Dsonar.projectKey=usdot-fhwa-stol_carma-simulation -Dsonar.projectName=carma-simulation -Dsonar.organization=usdot-fhwa-stol -Dsonar.host.url=https://sonarcloud.io test
+      - name: Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Maven Tests
+          path: target/site/jacoco/jacoco.xml
+          reporter: java-junit
+          fail-on-error: true
