--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -10,6 +10,18 @@
 
     <name>Eclipse MOSAIC Parent</name>
     <description>Parent Module Descriptor for Eclipse MOSAIC</description>
+	<properties>
+		<java.version>17</java.version>
+                <sonar.organization>usdot-fhwa-stol</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        
+                <!-- JaCoCo Properties -->
+                <jacoco.version>0.8.8</jacoco.version>
+                <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+                <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+                <sonar.language>java</sonar.language>
+	</properties>         
 
     <inceptionYear>2020</inceptionYear>
     <organization>
