--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -469,6 +469,8 @@
                             <header>${parent.dir}/legal/templates/license-header-2020.txt</header>
                             <header>${parent.dir}/legal/templates/license-header-2021.txt</header>
                             <header>${parent.dir}/legal/templates/cosimulation-license-header-2021.txt</header>
+                            <header>${parent.dir}/legal/templates/leidos-license-header-2022.txt</header>
+                            <header>${parent.dir}/legal/templates/leidos-license-header-2023.txt</header>
                         </validHeaders>
                         <headerDefinitions>
                         </headerDefinitions>
