--- a/co-simulation/rti/mosaic-rti-core/pom.xml
+++ b/co-simulation/rti/mosaic-rti-core/pom.xml
@@ -75,7 +75,7 @@
         <profile>
             <id>recreate-test-jar</id>
             <properties>
-                <skip.jar-test-creation>fakse</skip.jar-test-creation>
+                <skip.jar-test-creation>false</skip.jar-test-creation>
             </properties>
         </profile>
     </profiles>
