initial shell commit for infrastructure ambassador (#114)
<!-- Thanks for the contribution, this is awesome. -->

# PR Details
## Description

<!--- Describe your changes in detail -->
This is initial commit to setup shell structure for infrastructure
ambassador. The design mainly followed carma ambassador implementation
at the time of this commit.


![image](https://user-images.githubusercontent.com/20613282/225988497-09f80692-72f0-4c9a-af5f-3edb7dc92f59.png)

- It is assumed that there are multiple infrastructure components in the
carma-simulation each being represented by `V2xInstance` class.
- And all `V2xInstance` is managed by class called `V2xInstanceManager`.
- Each infrastructure component is registered using
`V2xRegistrationMessage` received by `V2xRegistrationReceiver` from
`RegisrationAdapter`.
- Time messages related to these instances are received by
`V2xTimeMessageReceiver` using `V2xTimeMessage`.

 
## Related Issue

<!--- This project only accepts pull requests related to open issues -->
<!--- If suggesting a new feature or change, please discuss it in an
issue first -->
<!--- If fixing a bug, there should be an issue describing it with steps
to reproduce -->
<!--- Please link to the issue here: -->

## Motivation and Context
See above.
<!--- Why is this change required? What problem does it solve? -->

## How Has This Been Tested?
local integration tested checking if the class builds in Eclipse IDE
<!--- Please describe in detail how you tested your changes. -->
<!--- Include details of your testing environment, and the tests you ran
to -->
<!--- see how your change affects other areas of the code, etc. -->

## Types of changes

<!--- What types of changes does your code introduce? Put an `x` in all
the boxes that apply: -->

- [ ] Defect fix (non-breaking change that fixes an issue)
- [X] New feature (non-breaking change that adds functionality)
- [ ] Breaking change (fix or feature that cause exis

--- a/co-simulation/rti/mosaic-rti-core/pom.xml
+++ b/co-simulation/rti/mosaic-rti-core/pom.xml
@@ -14,7 +14,7 @@
     <name>Eclipse MOSAIC Runtime Infrastructure Implementation</name>
 
     <properties>
-        <skip.jar-test-creation>true</skip.jar-test-creation>
+        <skip.jar-test-creation>false</skip.jar-test-creation>
     </properties>
 
     <dependencies>
@@ -60,7 +60,7 @@
                             </excludes>
                             <classifier/>
                             <finalName>TestFederate</finalName>
-                            <outputDirectory>${project.build.testSourceDirectory}</outputDirectory>
+                            <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                         </configuration>
                         <goals>
                             <goal>test-jar</goal>
