Enabled ns3 parameter for testing purpose

--- a/co-simulation/bundle/src/assembly/resources/scenarios/Tiergarten/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Tiergarten/scenario_config.json
@@ -28,7 +28,7 @@
         "cell": false,
         "environment": true,
         "sns": true,
-        "ns3": false,
+        "ns3": true,
         "omnetpp": false,
         "output": true,
         "sumo": true
