--- a/co-simulation/bundle/pom.xml
+++ b/co-simulation/bundle/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>mosaic-infrastructure</artifactId>
             <version>${mosaic.version}</version>
         </dependency>
+        <dependency>
+            <groupId>gov.dot.fhwa.saxton</groupId>
+            <artifactId>mosaic-carma-utils</artifactId>
+            <version>${mosaic.version}</version>
+        </dependency>
         <!-- Tutorial Applications -->
 
         <dependency>
