Fixed the dependency issue (modified by Kyle)

--- a/co-simulation/bundle/pom.xml
+++ b/co-simulation/bundle/pom.xml
@@ -38,6 +38,11 @@
 
         <!-- Libraries -->
         <dependency>
+            <groupId>gov.dot.fhwa.saxton</groupId>
+            <artifactId>mosaic-carma-utils</artifactId>
+            <version>${mosaic.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.mosaic</groupId>
             <artifactId>mosaic-objects</artifactId>
             <version>${mosaic.version}</version>
