--- a/co-simulation/lib/mosaic-carma-utils/pom.xml
+++ b/co-simulation/lib/mosaic-carma-utils/pom.xml
@@ -49,5 +49,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
