--- a/co-simulation/fed/mosaic-carla/pom.xml
+++ b/co-simulation/fed/mosaic-carla/pom.xml
@@ -59,6 +59,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.15</version>
+      </dependency>
   </dependencies>
 
   <profiles>
