--- a/co-simulation/fed/mosaic-infrastructure/pom.xml
+++ b/co-simulation/fed/mosaic-infrastructure/pom.xml
@@ -66,10 +66,14 @@
           <scope>compile</scope>
       </dependency>
       <dependency>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.1</version>
-          <scope>compile</scope>
+          <groupId>jakarta.xml.bind</groupId>
+          <artifactId>jakarta.xml.bind-api</artifactId>
+          <version>2.3.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.glassfish.jaxb</groupId>
+          <artifactId>jaxb-runtime</artifactId>
+          <version>2.3.2</version>
       </dependency>
   </dependencies>
 
