--- a/co-simulation/lib/mosaic-carma-utils/pom.xml
+++ b/co-simulation/lib/mosaic-carma-utils/pom.xml
@@ -40,6 +40,16 @@
             <version>${mosaic.version}</version>
         </dependency>
         <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
@@ -53,7 +63,6 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
