Setup basic CMake and gitignore

--- a/co-simulation/fed/mosaic-carla/src/main/c++/CMakeLists.txt
+++ b/co-simulation/fed/mosaic-carla/src/main/c++/CMakeLists.txt
@@ -1,4 +1,8 @@
-project(libcarla-jni)
+cmake_minimum_required(VERSION 3.16)
+include(CMakePrintHelpers)
+include(GNUInstallDirs)
+
+project(carla-jni)
 
 find_package(Java REQUIRED)
 find_package(JNI REQUIRED)
@@ -8,17 +12,26 @@ if (JNI_FOUND)
 endif()
 include(UseJava)
 
-add_library(libcarla-jni 
+add_library(carla-jni SHARED
     libcarla-jni.cpp)
+set_target_properties(carla-jni PROPERTIES SUFFIX ".so")
 
-target_include_directories(libcarla-jni
+include_directories(
     ${JNI_INCLUDE_DIRS}
     include
 )
 
-target_link_libraries(libcarla-jni
-    libcarla-clinet.a
+#ADD_LIBRARY(libcarla_client STATIC IMPORTED)
+#SET_TARGET_PROPERTIES(libcarla_client PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/libcarla_client.a)
+
+#TARGET_LINK_LIBRARIES(mytarget A boost_unit_test_framework C)
+cmake_print_variables(CMAKE_SOURCE_DIR)
+
+target_link_libraries(carla-jni
+    ${CMAKE_SOURCE_DIR}/libcarla_client.a
     ${JNI_LIBRARIES}
 )
 
-set_target_properties(libcarla-jni PROPERTIES SUFFIX ".so")
+install(TARGETS carla-jni
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
