Implement prototype tick() function

--- a/co-simulation/fed/mosaic-carla/src/main/c++/CMakeLists.txt
+++ b/co-simulation/fed/mosaic-carla/src/main/c++/CMakeLists.txt
@@ -19,20 +19,13 @@ set_target_properties(carla-jni PROPERTIES SUFFIX ".so")
 include_directories(
     ${JNI_INCLUDE_DIRS}
     include
-    carla
-)
-
-#ADD_LIBRARY(libcarla_client STATIC IMPORTED)
-#SET_TARGET_PROPERTIES(libcarla_client PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/libcarla_client.a)
-
-#TARGET_LINK_LIBRARIES(mytarget A boost_unit_test_framework C)
-cmake_print_variables(CMAKE_SOURCE_DIR)
+    carla)
 
 target_link_libraries(carla-jni
     ${CMAKE_SOURCE_DIR}/libcarla_client.a
-    ${JNI_LIBRARIES}
-)
+    ${JNI_LIBRARIES})
 
 install(TARGETS carla-jni
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
