--- a/co-simulation/fed/mosaic-infrastructure/pom.xml
+++ b/co-simulation/fed/mosaic-infrastructure/pom.xml
@@ -26,6 +26,13 @@
       <version>${mosaic.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.mosaic</groupId>
+      <artifactId>mosaic-objects</artifactId>
+      <version>${mosaic.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>gov.dot.fhwa.saxton</groupId>
         <artifactId>mosaic-carma-utils</artifactId>
         <version>${mosaic.version}</version>
