--- a/co-simulation/bundle/pom.xml
+++ b/co-simulation/bundle/pom.xml
@@ -17,7 +17,12 @@
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
-
+     <repositories>
+      <repository>
+        <id>clojars.org</id>
+        <url>https://repo.clojars.org</url>
+      </repository>
+    </repositories>
     <dependencies>
         <!-- Core -->
         <dependency>
@@ -81,6 +86,11 @@
             <groupId>org.eclipse.mosaic</groupId>
             <artifactId>mosaic-utils</artifactId>
             <version>${mosaic.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>clj-python</groupId>
+            <artifactId>libpython-clj</artifactId>
+            <version>2.024</version>
         </dependency>
 
         <!-- Federates -->
