--- a/co-simulation/fed/mosaic-carla/pom.xml
+++ b/co-simulation/fed/mosaic-carla/pom.xml
@@ -10,10 +10,16 @@
         <version>22.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
   </parent>
-
+  
   <artifactId>mosaic-carla</artifactId>
   <name>Eclipse MOSAIC CARLA Ambassador</name>
 
+    <repositories>
+      <repository>
+        <id>clojars.org</id>
+        <url>https://repo.clojars.org</url>
+      </repository>
+    </repositories>
   <dependencies>
     <dependency>
       <groupId>org.eclipse.mosaic</groupId>
@@ -63,6 +69,11 @@
           <groupId>commons-codec</groupId>
           <artifactId>commons-codec</artifactId>
           <version>1.15</version>
+      </dependency>
+      <dependency>
+        <groupId>clj-python</groupId>
+        <artifactId>libpython-clj</artifactId>
+        <version>2.024</version>
       </dependency>
   </dependencies>
 
