--- a/co-simulation/legal/templates/missing-licenses.properties
+++ b/co-simulation/legal/templates/missing-licenses.properties
@@ -8,4 +8,5 @@
 #
 #Fri Jun 25 10:56:39 CEST 2010
 clj-python--libpython-clj--2.024=Eclipse Public License, Version 2.0
+org.clojure--clojure--1.11.1=Eclipse Public License, Version 2.0
 com.cnuernber--ham-fisted--1.000-beta-85=MIT License
