--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04/carla/carla_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04/carla/carla_config.json
@@ -2,5 +2,7 @@
     "updateInterval": 100,
     "carlaUE4Path": "/opt/carla/",
     "bridgePath": "/opt/carma-simulation/scenarios/Town04/carla; bridge.sh",
-    "carlaConnectionPort": 8913
+    "carlaConnectionPort": 8913,
+    "carlaCDASimAdapterUrl":"http://127.0.0.1:8090/RPC2"
+
 }
