Update github action workflows to avoid duplicate actions on PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: "CI: Run tests"
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
   push:
+    branches: [develop, master]
 jobs:          
   sonar: # sonar job is to setup and run sonar scan analysis on telematic cloud messaging code
     runs-on: ubuntu-latest  
