--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04/scenario_config.json
@@ -24,17 +24,18 @@
         }
     },
     "federates": {
-        "application": true,
+        "application": false,
         "cell": false,
         "environment": false,
         "sns": false,
-        "ns3": true,
+        "ns3": false,
         "omnetpp": false,
         "output": false,
-        "sumo": true,
-        "carla": true,
-        "carma": true,
-        "infrastructure": true
-        
+        "sumo": false,
+        "carla": false,
+        "carma": false,
+        "infrastructure": false,
+        "canned-detected-object": true
+
     }
 }
