Include flag to force sonar scan with depreciated java version

--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -37,3 +37,6 @@ sonar.cfamily.cache.enabled=false
 # Tests
 # Note: For C++ setting this field does not cause test analysis to occur. It only allows the test source code to be evaluated.
 #carla_ackermann_control_wrapper.sonar.tests=test
+# Force analysis on depreciated Java Version 11
+# TODO: Update java version for CDASim to 17
+sonar.scanner.force-deprecated-java-version = true
